# stringpod

./: .bumpversion.cfg  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/workflows/: build.yml  dev.yml  preview.yml  release.yml
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  installation.md  usage.md
installation/: index.html
search/: search_index.json
stringpod/: cli.py  language.py  normalizer.py  number.py  pinyin.py  segmentation.py  sort.py  stringpod.py
tests/: __init__.py  test_normalizer.py  test_text_match.py
text_match/: __init__.py  cli.py  normalizer.py  text_match.py
usage/: index.html
